changes on view

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -394,16 +394,16 @@
                   </ul>-->
                 </li>
 
-                <!--<li class="nav__dropdow" ng-class="{'active': pageType == 'business'}">
+                <li class="nav__dropdow" ng-class="{'active': pageType == 'business'}">
                   <a href="/business">Business</a>
-                  <ul class="nav__dropdown-menu">
+                  <!--<ul class="nav__dropdown-menu">
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="search-results.html">Search Results</a></li>
                     <li><a href="categories.html">Categories</a></li>
                     <li><a href="404.html">404</a></li>
-                  </ul>
-                </li>-->            
+                  </ul>-->
+                </li>           
 
                 <!--<li class="nav__dropdow" ng-class="{'active': pageType == 'sports'}">
                   <a href="/sports">Sports</a>
