--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,8 +72,7 @@
 
   <style type="text/css">
     .visited-link {
-      color: orange!important;
-      font-size: 12px
+      color: darkRed!important;
     }
 
     .filter-input {
