add mobile app download

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -738,8 +738,9 @@
               <a href="{{holdShared}}" style="margin-left: 10px;text-decoration: underline;" ng-if="holdShared">Shared link</a>
             </div>
             <div>
+               <a href="https://play.google.com/store/apps/details?id=com.goodmorning9ja.gm9ja" class="switch-for-mobile">Download Android mobile app now!</a>
                <a href="" ng-click="refresh()" title="load new headlines" class="refres"><i class="fa fa-refresh" style="font-size: 14px;color: orange"></i> Refresh</a>
-               <a href="" ng-click="getLink()" class="no-mobile"><i class="fa fa-heart" style="color: orange;margin-left: 15px"></i> whatsapp web</a><br>
+               <a href="" ng-click="getLink()" class="no-mobile"><i class="fa fa-heart" style="color: orange;margin-left: 15px"></i> whatsapp web</a>
                
                <input type="text" name="" class="filter" ng-model="news" placeholder="Search by headline keywords, news source or date (mm/dd)">
             </div>
